before starting to use a custom field

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,11 +5,13 @@
 <table>
   <thead>
     <tr>
-    
+
       <th colspan="3"></th>
     </tr>
   </thead>
-
+  <%= link_to 'New Post', new_post_path %>
+  <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+  <%= link_to 'Sign in', user_session_path %>
   <tbody>
     <% @posts.each do |post| %>
       <tr>
@@ -24,5 +26,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New Post', new_post_path %>
