--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <%= @post.caption %>
   <%= image_tag(@post.image.url) %>
+  <%=@post.user.email %>
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
